--- a/orders.html
+++ b/orders.html
@@ -254,6 +254,13 @@
         <script src="js/products.js"></script>
         <script src="js/orders.js"></script>
         <script src="js/cart.js"></script>
+    <script>
+                 document.addEventListener("DOMContentLoaded", () => {
+                  console.log("DOM fully loaded and parsed");
+                  loadOrderHistory();
+                 }); 
+    </script>
+
 </body>
     
 </html>
